@@ -1,3 +1,13 @@
+2012-12-07  Eli Zaretskii  <eliz@gnu.org>
+
+	* job.c (create_batch_file): Declare the counter of batch files
+	static, to avoid having 2 jobs using the same file name and
+	stepping on each other's toes.  When all 64K names are used up,
+	make one more loop looking for slots that became vacant.  This
+	avoids leaving behind temporary batch files in the temporary
+	directory, which happens frequently on a fast machine when using
+	parallel builds.
+
 2012-10-29  Paul Smith  <psmith@gnu.org>
 
 	New feature: "load" directive for dynamically-loaded objects.
